--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,11 @@
   color: #61dafb;
 }
 
+.main {
+  height: 100vh;
+  background-image: url('./imgs/coffie-shop-cover.jpg');
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
